--- a/Shared/TheDiveLog.Shared.csproj
+++ b/Shared/TheDiveLog.Shared.csproj
@@ -8,4 +8,8 @@
     <Compile Remove="WeatherForecast.cs" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.ComponentModel.Annotations" Version="4.7.0" />
+  </ItemGroup>
+
 </Project>
