--- a/Client/TheDiveLog.Client.csproj
+++ b/Client/TheDiveLog.Client.csproj
@@ -7,6 +7,8 @@
 
   <ItemGroup>
     <Content Remove="Pages\Counter.razor" />
+    <Content Remove="Pages\DiverInfo\AddEditDiver.razor" />
+    <Content Remove="Pages\DiverInfo\DiverForm.razor" />
     <Content Remove="Pages\FetchData.razor" />
     <Content Remove="Shared\AppTitle.razor" />
     <Content Remove="Shared\LoginDisplay.razor" />
